<resources>
    <string name="app_name">EmisApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_placeholder">Placeholder</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="semester_key">semesterIdx</string>
    <string name="class_key">classIdx</string>

    <string-array name="drawer_items">
        <item>Student Info</item>
        <item>Tuition Card</item>
        <item>BS Transcript</item>
        <item>Settings</item>
    </string-array>


    <string-array name="drawer_icons">
        <item>@drawable/user</item>
        <item>@drawable/semesters</item>
        <item>@drawable/bs_transcript</item>
        <item>@drawable/settings</item>
    </string-array>

    <string name="title_activity_classes">ClassesActivity</string>
    <string name="grade_indicator">Grade:</string>
    
    <string name="student_major">სპეციალობა:</string>
    <string name="student_degree">საფეხური:</string>
    <string name="student_semester">მიმდინარე სემესტრი:</string>
    <string name="student_gender">სქესი:</string>
    <string name="student_nationality">ეროვნება:</string>
    <string name="student_birth_date">დაბადების თარიღი</string>
    <string name="student_address">მისამართი:</string>
    <string name="student_status">სტატუსი:</string>
    <string name="student_school">სკოლა:</string>
    <string name="student_credits">დაგროვებული კრედიტები:</string>
    <string name="student_gpa">GPA</string>
    <string name="student_phone_number">ტელეფონის ნომერი:</string>

    <string name="preference_file_key">ge.edu.freeuni.emis.emisapp.prefs</string>
    <string name="notification_pref">notifOn</string>
    <string name="notification_period">notifPeriod</string>
    <string name="refresh_on">refreshOn</string>

    <string-array name="unused_cats">
        <item>შედეგი</item>
        <item>ჯამი</item>
        <item>საბოლოო შეფასება</item>
    </string-array>

    <string-array name="duration_indicators">
        <item>5 min.</item>
        <item>15 min.</item>
        <item>30 min.</item>
        <item>1 hour</item>
        <item>12 hours</item>
    </string-array>

    <string name="transcript_class_code">საგნის კოდი:</string>
    <string name="transcript_semester">სემესტრი, წელი:</string>
    <string name="transcript_grade">შეფასება:</string>
    <string name="transcript_credits">დაგროვებული კრედიტები:</string>
    <string name="transcript_score">დაგროვებული ქულა:</string>

</resources>
