<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/class_name"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/theme_color"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" >
        <TextView
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcript_class_code"/>
        <TextView
            android:id="@+id/class_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" >
        <TextView
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcript_semester"/>
        <TextView
            android:id="@+id/semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" >
        <TextView
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcript_grade"/>
        <TextView
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" >
        <TextView
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcript_credits"/>
        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" >
        <TextView
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcript_score"/>
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>